        expressions
      - Added --alertonly here
      - Added --multiline here
    - listhosts
      - %host_state_strings was mostly nonsense. The mapped poser states from
        for virtual machines were used. Hash removed. Using now the orginal 
        power states from the system (from the docs):
        - poweredOff -> The host was specifically powered off by the user
                        through VirtualCenter. This state is not a certain
                        state, because after VirtualCenter issues the command
                        to power off the host, the host might crash, or kill
                        all the processes but fail to power off.
        - poweredOn  -> The host is powered on
        - standBy    -> The host was specifically put in standby mode, either
                        explicitly by the user, or automatically by DPM. This
                        state is not a cetain state, because after VirtualCenter
                        issues the command to put the host in stand-by state,
                        the host might crash, or kill all the processes but fail
                        to power off.
        - unknown    -> If the host is disconnected, or notResponding, we can
                        not possibly have knowledge of its power state. Hence,
                        the host is marked as unknown. 
      - Added working blacklist/whitelist with the ability to use regular
        expressions
      - Added --alertonly here
      - Added --multiline here
    - listcluster
      - Removed senseless perf data
      - More detailed check than before
      - Added working blacklist/whitelist with the ability to use regular
        expressions
      - Added --alertonly here
      - Added --multiline here
    - status
      - Rewritten and reformatted
    - tools
      - Rewritten and reformatted
      - Improved more detailed output.
        expressions
      - Added --alertonly here
      - Added --multiline here