@@ -812,3 +812,14 @@ History:
         expressions
       - Added --alertonly here
       - Added --multiline here
+
+- 24 Jan 2014 M.Fuerstenau version 0.9.4
+  - Merged pull request from Sven Nierlein
+    - Modified hel to work with Thruk
+    - Added Makefile. This is optional. Calling it generates a single file
+      from all the modules. Maybe it is a little bit slower than the modules.
+      The readon for modules was speed and better maintenance.
+  - host_runtime_info()
+    - Corrected typo
+  - Enhanced README. Explained the differences un host_storage_info() between
+    the original one and this one
